--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ body {
   box-sizing: border-box;
 }
 
-.btn {
+.button {
   padding: 10px 15px;
   background-color: var(--secondary);
   color: var(--primary);
@@ -57,19 +57,131 @@ body {
   line-height: 1.1;
 }
 
-.btn:hover {
+.button:hover {
   background-color: #1aa762;
   opacity: 1;
   cursor: pointer;
 }
 
-.btn:disabled {
+.button:disabled {
   pointer-events: none;
   opacity: 0.5;
 }
 
 input:focus {
   outline: none;
+}
+
+/* Header Styles */
+header {
+  background-color: var(--primary);
+}
+
+header .inner-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
+}
+
+header a {
+  color: var(--white);
+  font-size: 1.25rem;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+header a:hover {
+  opacity: 0.7;
+}
+
+header .brand a {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+header .nav-links {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+header .nav-links li {
+  display: inline-block;
+  margin-right: 30px;
+}
+
+header .nav-links li:last-child {
+  margin-right: 0;
+}
+
+/* Add Page */
+.add-content {
+  padding: 50px 0;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.add-content .input-wrapper input {
+  width: 100%;
+  background-color: var(--primary);
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  color: var(--white);
+  font-size: 1.25rem;
+}
+
+.results {
+  padding: 0;
+  margin: 0;
+  margin-top: 20px;
+}
+
+.results li {
+  list-style: none;
+}
+
+.result-card {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.result-card .poster-wrapper img,
+.filler-poster {
+  width: 75px;
+  height: 113px;
+  background-color: #dbdada;
+  border-radius: 5px;
+  margin-right: 15px;
+  display: block;
+  color: transparent;
+}
+
+.result-card .info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.result-card .info .title {
+  font-size: 1.25rem;
+  color: var(--primary);
+  font-weight: 600;
+  margin: 0;
+}
+
+.result-card .info .release-date {
+  font-size: 1.25rem;
+  font-weight: 300;
+  color: var(--primary);
+  margin: 0;
+}
+
+.result-card .controls button {
+  margin-right: 10px;
 }
 
 /* Movie Page */
@@ -157,7 +269,7 @@ input:focus {
   opacity: 1;
 }
 
-.ctrl-btn {
+.ctrl-button {
   color: #fefefe;
   background-color: transparent;
   border: none;
@@ -167,7 +279,7 @@ input:focus {
   margin: 0;
 }
 
-.ctrl-btn:hover {
+.ctrl-button:hover {
   color: var(--secondary);
   cursor: pointer;
 }
