seperated css files

--- a/src/components/Add/Add.css
+++ b/src/components/Add/Add.css
@@ -61,6 +61,13 @@
   margin: 0;
 }
 
+.result-card .info .reviews{
+  font-size: 0.9rem;
+  font-weight: 300;
+  color: var(--primary);
+  margin: 0;
+}
+
 .result-card .controls button {
   margin-right: 10px;
 }
