--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600;700&display=swap");
 
 :root {
   --primary: #032541;
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -44,6 +44,7 @@ body {
   box-sizing: border-box;
 }
 
+/* buttons */
 .button {
   padding: 10px 15px;
   background-color: var(--secondary);
@@ -73,7 +74,7 @@ input:focus {
   outline: none;
 }
 
-/* Movie Page */
+/* Movie Page (for Watchlist.js and Watched.js) */
 .movie-page {
   padding: 30px 0;
 }
@@ -110,67 +111,6 @@ input:focus {
   .movie-grid {
     grid-template-columns: repeat(5, 1fr);
   }
-}
-
-.movie-card {
-  width: 100%;
-  border-radius: 5px;
-  overflow: hidden;
-  position: relative;
-  border: 0;
-  display: block;
-}
-
-.movie-card img {
-  width: 100%;
-  display: block;
-}
-
-.movie-card .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 2px solid transparent;
-  transition: all 0.3s ease;
-}
-
-.movie-card:hover .overlay {
-  border: 3px solid var(--secondary);
-}
-
-.movie-card .inner-card-controls {
-  display: inline;
-  background-color: red;
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgba(0, 0, 0, 0.8);
-  border-radius: 5px;
-  padding: 3px;
-  opacity: 0;
-  transition: all 0.3s ease;
-}
-
-.movie-card:hover .inner-card-controls {
-  opacity: 1;
-}
-
-.ctrl-button {
-  color: #fefefe;
-  background-color: transparent;
-  border: none;
-  transition: all 0.3s ease;
-  font-size: 1.25rem;
-  padding: 5px;
-  margin: 0;
-}
-
-.ctrl-button:hover {
-  color: var(--secondary);
-  cursor: pointer;
 }
 
 .movie-page .no-movies {
