--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,46 +1,55 @@
-
 .movie-card {
-    width: 100%;
-    border-radius: 5px;
-    overflow: hidden;
-    position: relative;
-    border: 0;
-    display: block;
-  }
-  
-  .movie-card img {
-    width: 100%;
-    display: block;
-  }
-  
-  .movie-card .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 2px solid transparent;
-    transition: all 0.3s ease;
-  }
-  
-  .movie-card:hover .overlay {
-    border: 3px solid var(--secondary);
-  }
-  
-  .movie-card .inner-card-controls {
-    display: inline;
-    background-color: red;
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: rgba(0, 0, 0, 0.8);
-    border-radius: 5px;
-    padding: 3px;
-    opacity: 0;
-    transition: all 0.3s ease;
-  }
-  
-  .movie-card:hover .inner-card-controls {
-    opacity: 1;
-  }
+  width: 100%;
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+  border: 0;
+  display: block;
+}
+
+.movie-card img {
+  width: 100%;
+  display: block;
+}
+
+.movie-card .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid transparent;
+  transition: all 0.3s ease;
+}
+
+.movie-card:hover .overlay {
+  border: 2px solid var(--secondary);
+}
+
+.movie-card .title {
+  text-align: center;
+  color: var(--primary);
+}
+
+.movie-card .description {
+  text-align: center;
+  font-weight: 400;
+}
+
+.movie-card .inner-card-controls {
+  display: inline;
+  background-color: red;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+  padding: 3px;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+.movie-card:hover .inner-card-controls {
+  opacity: 1;
+}
