--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,23 @@ body {
   font-family: "Rubik", sans-serif;
   padding: 0;
   margin: 0;
+
+  background: url("./images/wallpaper9.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: bottom;
+}
+
+body::before {
+  content: "";
+  display: block;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  background-color: rgba(255, 255, 255, 0.65);
 }
 
 .container {
@@ -75,44 +92,6 @@ input:focus {
 }
 
 /* Movie Page (for Watchlist.js and Watched.js) */
-.dark {
-  background: url("./images/wallpaper6.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: bottom;
-}
-
-.dark:before {
-  content: "";
-  display: block;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  z-index: -1;
-  background-color: rgba(255, 255, 255, 0.65);
-}
-
-.light {
-  background: url("./images/wallpaper9.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: bottom;
-}
-
-.light::before {
-  content: "";
-  display: block;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  z-index: -1;
-  background-color: rgba(255, 255, 255, 0.7);
-}
-
 .movie-page {
   padding: 30px 0;
 }
