--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -15,7 +15,7 @@ section {
   flex-direction: column;
   justify-content: flex-start;
   padding: 1rem;
-  background-color: #21d07a40;
+  background-color: transparent;
 }
 
 form {
