--- a/src/components/Add/Add.css
+++ b/src/components/Add/Add.css
@@ -8,9 +8,11 @@
 .add-content .sort-wrapper {
   font-weight: 600;
   color: var(--primary);
+  margin-bottom: 10px;
 }
 
 .sort-title {
+  font-size: 1.2rem;
   margin-right: 12px;
 }
 
