--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -28,7 +28,7 @@ form {
 
 .login a,
 .login a:visited {
-  color: #fff;
+  color: var(--primary);
 }
 
 input[type="text"],
@@ -53,7 +53,7 @@ label,
   font-size: 0.75rem;
   border-radius: 0.5rem;
   background: #000;
-  color: #fff;
+  color: var(--white);
   padding: 0.25rem;
   position: relative;
   bottom: -10px;
