--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -54,7 +54,7 @@ label,
   font-size: 0.75rem;
   border-radius: 0.5rem;
   background: #000;
-  color: #fff;
+  color: white;
   padding: 0.25rem;
   position: relative;
   bottom: -10px;
