--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600;700&display=swap");
 
 :root {
-  --primary: #032541;
-  --secondary: #21d07a;
+  --primary: #00539c;
+  --secondary: #eea47f;
   --white: white;
 }
 
@@ -12,7 +12,7 @@ body {
   padding: 0;
   margin: 0;
 
-  background: url("./images/wallpaper9.jpg");
+  background: url("./images/wallpaper1.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: bottom;
@@ -77,8 +77,9 @@ body::before {
 }
 
 .button:hover {
-  background-color: #1aa762;
+  background-color: var(--secondary);
   opacity: 1;
+  filter: brightness(80%);
   cursor: pointer;
 }
 
